// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render correctly when the type is flat and the variant is valid 1`] = `
<div>
  <button
    class="sc-AxjAm NihpJ"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 2`] = `
<div>
  <button
    class="sc-AxjAm bYxxmF"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 3`] = `
<div>
  <button
    class="sc-AxjAm grWaJJ"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 4`] = `
<div>
  <button
    class="sc-AxjAm jpniFt"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 5`] = `
<div>
  <button
    class="sc-AxjAm fMVDAN"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 6`] = `
<div>
  <button
    class="sc-AxjAm caTNnl"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 7`] = `
<div>
  <button
    class="sc-AxjAm fifold"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 8`] = `
<div>
  <button
    class="sc-AxjAm gpEUHl"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is flat and the variant is valid 9`] = `
<div>
  <button
    class="sc-AxjAm rYLqV"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 1`] = `
<div>
  <button
    class="sc-AxjAm llmhkQ"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 2`] = `
<div>
  <button
    class="sc-AxjAm eoPXtw"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 3`] = `
<div>
  <button
    class="sc-AxjAm fSJgpw"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 4`] = `
<div>
  <button
    class="sc-AxjAm fQSqmY"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 5`] = `
<div>
  <button
    class="sc-AxjAm gnccyc"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 6`] = `
<div>
  <button
    class="sc-AxjAm kcLAoQ"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 7`] = `
<div>
  <button
    class="sc-AxjAm heXLmI"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 8`] = `
<div>
  <button
    class="sc-AxjAm kMFBtw"
  >
    Button
  </button>
</div>
`;

exports[`<Button/> should render correctly when the type is raised and the variant is valid 9`] = `
<div>
  <button
    class="sc-AxjAm jDRcEk"
  >
    Button
  </button>
</div>
`;
